peut add des photos avec /cover et a update les datas types en conséquence
